Настроил Cache и gzip

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -8,6 +8,18 @@
     <h1>Hello, World!</h1>
     <h2>This is index.html</h2>
     <h3>Igor Smirnov</h3>
-    <img src="../img/images.jpeg" alt="Картинка">
+    <lu>
+        <li><img src="../img/images.jpeg" alt="Картинка"></li>
+        <li><img src="../img/images.jpeg" alt="Картинка"></li>
+        <li><img src="../img/images.jpeg" alt="Картинка"></li>
+        <li><img src="../img/images.jpeg" alt="Картинка"></li>
+        <li><img src="../img/images.jpeg" alt="Картинка"></li>
+        <li><img src="../img/images.jpeg" alt="Картинка"></li>
+        <li><img src="../img/images.jpeg" alt="Картинка"></li>
+        <li><img src="../img/images.jpeg" alt="Картинка"></li>
+        <li><img src="../img/images.jpeg" alt="Картинка"></li>
+        <li><img src="../img/images.jpeg" alt="Картинка"></li>
+    </lu>
+
 </body>
 </html>
