Перевёл сами сервера на https. Теперь вроде всё работает

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -10,15 +10,8 @@
     <h3>Igor Smirnov</h3>
     <lu>
         <li><img src="../img/images.jpeg" alt="Картинка"></li>
-        <li><img src="../img/images.jpeg" alt="Картинка"></li>
-        <li><img src="../img/images.jpeg" alt="Картинка"></li>
-        <li><img src="../img/images.jpeg" alt="Картинка"></li>
-        <li><img src="../img/images.jpeg" alt="Картинка"></li>
-        <li><img src="../img/images.jpeg" alt="Картинка"></li>
-        <li><img src="../img/images.jpeg" alt="Картинка"></li>
-        <li><img src="../img/images.jpeg" alt="Картинка"></li>
-        <li><img src="../img/images.jpeg" alt="Картинка"></li>
-        <li><img src="../img/images.jpeg" alt="Картинка"></li>
+        <li><img src="../img/linux-mint-1.jpg" alt="Картинка"></li>
+        <li><img src="../img/linux-mint-2.jpg" alt="Картинка"></li>
     </lu>
 
 </body>
